--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,22 +1,22 @@
 <% if notice %>
-<p id="notice"><%= notice %></p>
+  <p id="notice"><%= notice %></p>
 <% end %>
 <h1>Your Pragmatic Catalog</h1>
+<% session[:counter] = session[:counter].nil? ? 1 : (session[:counter] + 1) %>
 <% cache ['store', Product.latest] do %>
-<% @products.each do |product| %>
-
-<% cache ['entry', product] do %>
-<div class="entry">
-<%= image_tag(product.image_url) %>
-<h3><%= product.title %></h3>
-<%= sanitize(product.description) %>
-<div class="price_line">
-<span class="price"><%= number_to_currency(product.price) %></span>
-</div>
-</div>
-
+  <% @products.each do |product| %>
+    <% cache ['entry', product] do %>
+      <div class="entry">
+        <%= image_tag(product.image_url) %>
+        <h3><%= product.title %></h3>
+        <%= sanitize(product.description) %>
+        <div class="price_line">
+          <span class="price"><%= number_to_currency(product.price) %></span>
+          <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
 <% end %>
-<% end %>
- <% end %>
 
 
