--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,12 @@
     <div id="columns">
       <div id="side">
         <p class = time><%=Time.new.strftime("%Y-%m-%d , %H:%M:%S")%></p>
+        <% if @cart %>
+          <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+            <%= render(@cart) %>
+          <% end %>
+        <% end %>
+
         <ul>
           <li><a href="http://www....">Home</a></li>
           <li><a href="http://www..../faq">Questions</a></li>
