--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -6,6 +6,10 @@
 <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
 </tr>
 </table>
-<%= button_to "Checkout", new_order_path, method: :get, data: {disable_with: 'no'}  %>
+<% if(controller_name == 'orders' && action_name = 'new')%>
+<%= button_to "Checkout", new_order_path, method: :get ,disabled: :true  %>
+<% else %>
+<%= button_to "Checkout", new_order_path, method: :get %>
+<%end%>
 <%= button_to 'Empty cart', cart, method: :delete,
 data: { confirm: 'Are you sure?' } %>
