--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,6 +27,19 @@
     <%= f.label :price %><br>
     <%= f.text_field :price %>
   </div>
+  <div class="field">
+    <%= f.label :Discount_Price %><br>
+    <%= f.text_field :discount_price %>
+  </div>
+  <div class="field">
+    <%= f.label :permalink %><br>
+    <%= f.text_field :permalink %>
+  </div>
+  <div class="field">
+    <%= f.label :notifications %><br>
+    <%= f.check_box :enabled %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
