--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,6 +18,10 @@
         <%= f.label :name, 'Name:' %>
         <%= f.text_field :name, size: 40 %>
       </div>
+      <div class="field">
+        <%= f.label :email, 'Email: ' %>
+        <%= f.text_field :email %>
+      </div>
       <% unless @user.new_record? %>
         <div class="field">
           <%= f.label :Old_Pass, 'Old Password' %>
