--- a/app/views/orders/_form.html
+++ b/app/views/orders/_form.html
@@ -1,3 +1,4 @@
+
 <%= form_for(@order) do |f| %>
   <% if @order.errors.any? %>
     <div id="error_explanation">
@@ -32,6 +33,8 @@
     <%= f.select :pay_type, Order::PAYMENT_TYPES,
     prompt: t('.pay_prompt_html') %>
   </div>
+
+  <%= f.hidden_field :user_id, value: session[:user_id] %>
 
   <div class="actions">
     <%= f.submit t('.submit') %>
