--- a/app/views/users/show_orders.html.erb
+++ b/app/views/users/show_orders.html.erb
@@ -7,6 +7,7 @@
       <th>Address</th>
       <th>Email</th>
       <th>Pay Type</th>
+      <th>Total</th>
     </tr>
   </thead>
   <tbody>
@@ -16,6 +17,7 @@
       <td><%=order.address %></td>
       <td><%=order.email %></td>
       <td><%=order.pay_type %></td>
+      <td><%=order.total %></td>
     </tr>
   <% end%>
   <tbody>
